@@ -13,6 +13,7 @@ package org.mini2Dx.desktop.playerdata;
 
 import java.io.*;
 import java.nio.file.Paths;
+import java.util.Arrays;
 
 import org.mini2Dx.core.Mdx;
 import org.mini2Dx.core.playerdata.PlayerData;
@@ -88,9 +89,14 @@ public class DesktopPlayerData implements PlayerData {
 			ensureDirectoryExistsForFile(filepath);
 			StringWriter writer = new StringWriter();
 			Mdx.xml.toXml(object, writer);
-			resolve(filepath).writeString(writer.toString(), false);
+
+			FileHandle file = resolve(filepath);
+			FileHandle tmpFile = resolveTmp(filepath);
+			tmpFile.writeString(writer.toString(), false);
 			writer.flush();
 			writer.close();
+
+			tmpFile.file().renameTo(file.file());
 		} catch (SerializationException e) {
 			throw new PlayerDataException(e);
 		} catch (IOException e) {
@@ -119,7 +125,10 @@ public class DesktopPlayerData implements PlayerData {
 			throw new PlayerDataException("No file path specified");
 		}
 		try {
-			resolve(filepath).writeString(Mdx.json.toJson(object), false);
+			FileHandle file = resolve(filepath);
+			FileHandle tmpFile = resolveTmp(filepath);
+			tmpFile.writeString(Mdx.json.toJson(object), false);
+			tmpFile.file().renameTo(file.file());
 		} catch (SerializationException e) {
 			throw new PlayerDataException(e);
 		}
@@ -146,7 +155,9 @@ public class DesktopPlayerData implements PlayerData {
 		}
 		try {
 			FileHandle file = resolve(filepath);
-			file.writeString(content, false);
+			FileHandle tmpFile = resolveTmp(filepath);
+			tmpFile.writeString(content, false);
+			tmpFile.file().renameTo(file.file());
 		} catch (Exception e) {
 			throw new PlayerDataException(e);
 		}
@@ -176,10 +187,12 @@ public class DesktopPlayerData implements PlayerData {
 		}
 		try {
 			FileHandle file = resolve(filepath);
-			final OutputStream outputStream = file.write(false);
+			FileHandle tmpFile = resolveTmp(filepath);
+			final OutputStream outputStream = tmpFile.write(false);
 			obj.writeData(new DataOutputStream(outputStream));
 			outputStream.flush();
 			outputStream.close();
+			tmpFile.file().renameTo(file.file());
 		} catch (Exception e) {
 			throw new PlayerDataException(e);
 		}
@@ -273,6 +286,12 @@ public class DesktopPlayerData implements PlayerData {
 
 	private FileHandle resolve(String[] filepath) {
 		return Gdx.files.absolute(Paths.get(saveDirectory, filepath).toString());
+	}
+
+	private FileHandle resolveTmp(String[] filepath) {
+		final String [] tmpFilepath = Arrays.copyOf(filepath, filepath.length);
+		tmpFilepath[tmpFilepath.length - 1] = tmpFilepath[tmpFilepath.length - 1] + ".tmp";
+		return Gdx.files.absolute(Paths.get(saveDirectory, tmpFilepath).toString());
 	}
 
 	public String getSaveDirectory() {
