@@ -5,6 +5,7 @@
 - Added method to get file handles within the player data directory
 - Added CustomCursor class for implementing custom cursors with up/down state
 - UiContainer can now have multiple navigation action keys
+- Mdx.playerData now uses temp files on desktop to write before moving files to target filename
 - Fixed Graphics#tint not being reset each frame
 - Fixed UI navigation cursor not updating when switching between controller and mouse
 
